--- a/main.css
+++ b/main.css
@@ -1,47 +1,68 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 img {
-    width: 150px;
-    height: 150px;
+  width: 150px;
+  height: 150px;
 }
 
 div[data-product-list] {
-    display: flex;
+  display: flex;
+  position: relative;
 }
+
+/* picture : 2 */
+div[data-product-item] + img {
+  height: 300px;
+  width: 300px;
+}
+/* picture : 1 */
+div[data-product-item] > img {
+  height: 200px;
+  width: 200px;
+}
+/* picture : 3 */
+div > img {
+  height: 250px;
+  width: 250px;
+}
+/*  */
 div[data-product-item] {
-    margin: 2rem;
+  margin: 2rem;
+
+  width: 300px;
+  position: relative;
 }
 nav {
-    padding: 2rem 2rem;
-    background: orangered;
-    position: relative;
-    margin-bottom: 1rem;
+  padding: 2rem 2rem;
+  background: orangered;
+  position: relative;
+  margin-bottom: 1rem;
 }
 h1 {
-    color: white;
+  color: white;
 }
 a:visited {
-    color: white;
+  color: white;
 }
 
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 #companyName {
-    font-family: 'Staatliches';
-    font-size: 4rem;
+  font-family: "Staatliches";
+  font-size: 4rem;
 }
 
 .nav-links {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 /* DO NOT TOUCH CSS ABOVE FOR THIS EXERCISE - WRITE YOURS BELOW :) */
